--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chankamlam/nest-jaeger",
-  "version": "1.0.3",
+  "version": "1.0.16",
   "description": "Jaeger middleware to request tracing for nest application",
   "keywords": [
     "Jaeger",
@@ -14,7 +14,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist && tsc -p tsconfig.json",
     "prepublishOnly": "npm run build",
-    "publish": "npm publish --access public"
+    "p": "npm publish --access public"
   },
   "author": {
     "name": "chankamlam",
